Provide Gradle projects as dependencies