@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2021 DiffPlug
+ * Copyright 2016-2023 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,8 @@
 package com.diffplug.spotless;
 
 import java.io.File;
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import org.assertj.core.api.Assertions;
@@ -25,12 +26,10 @@ import org.junit.jupiter.api.Test;
 class ProvisionerTest {
 	@Test
 	void testManipulation() {
-		Provisioner provisioner = (withTransitives, deps) -> deps.stream().map(File::new).collect(Collectors.toSet());
-		Assertions.assertThat(provisioner.provisionWithTransitives(true, "a"))
+		Provisioner provisioner = (withTransitives, deps) -> deps.stream().map(Object::toString).map(File::new).collect(Collectors.toSet());
+		Assertions.assertThat(provisioner.provisionWithTransitives(true, Collections.singleton("a")))
 				.containsExactlyInAnyOrder(new File("a"));
-		Assertions.assertThat(provisioner.provisionWithTransitives(true, "a", "a"))
-				.containsExactlyInAnyOrder(new File("a"));
-		Assertions.assertThat(provisioner.provisionWithTransitives(true, Arrays.asList("a", "a")))
+		Assertions.assertThat(provisioner.provisionWithTransitives(true, List.of("a", "a")))
 				.containsExactlyInAnyOrder(new File("a"));
 	}
 }
